<resources>
    <string name="app_name">BackToSchool</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_school">Back To School</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="department">Department</string>
    <string name="designation">Designation</string>
    <string name="father_name">Father Name</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="mobile">Mobile</string>


    <string name="phone">请输入手机号：</string>
    <string name="massage">请输入信息内容：</string>
    <string name="content">这里输入信息内容</string>
    <string name="send">发送</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="absent_students">Absent Students</string>
    <string name="birthday">Birthday</string>
    <string name="driver_info">Driver Info</string>
    <string name="school_bus_info">School Bus Info</string>
    <string name="school_bus_tracking">School Bus Tracking</string>
    <string name="student_info">Student Info</string>
</resources>
