<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/absent_student"
            android:icon="@mipmap/absent"
            android:title="@string/absent_students" />
        <item
            android:id="@+id/student_info"
            android:icon="@mipmap/student2"
            android:title="@string/student_info" />

        <item
            android:id="@+id/bus_tracking"
            android:icon="@mipmap/map1"
            android:title="@string/school_bus_tracking" />

        <item
            android:id="@+id/school_info"
            android:icon="@mipmap/bus"
            android:title="@string/school_bus_info" />

        <item
            android:id="@+id/driver_info"
            android:icon="@mipmap/driver1"
            android:title="@string/driver_info" />

        <item
            android:id="@+id/birthday"
            android:icon="@mipmap/birthday3"
            android:title="@string/birthday" />
    </group>
</menu>