<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <!-- 请输入手机号码标签 -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        />
    <!-- 手机号码编辑框 -->
    <EditText
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="这里输入手机号码"
        />
    <!-- 请输入手机内容标签 -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/massage"
        />
    <!-- 信息内容输入框 -->
    <EditText
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:minLines="3"
        android:hint="@string/content"
        />
    <!-- 发送按纽 -->
    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="send"
        />
</LinearLayout>