<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.rjt.backtoschool.fragments.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha=".5"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/rain10"
            tools:ignore="ContentDescription"
            android:layout_alignBottom="@+id/linearLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/back_to_school"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorWhite"
                android:textSize="32sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_name_layout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/sign_up_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/full_name"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_father_name_layout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/sign_up_father_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/father_name"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_department_layout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/sign_up_department"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/department"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_designation_layout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/sign_up_designation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/designation"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_dob_layout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/sign_up_dob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/date_of_birth"
                    android:inputType="date"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_gender_layout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/sign_gender_dob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/gender"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_address_layout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/sign_address_dob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_email_layout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_mobile_layout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/sign_mobile_dob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_password_layout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_confirm_password_layout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/sign_up_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/register_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="100dp"
                android:text="@string/sign_up"
                app:bootstrapBrand="warning"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
